# kineticmodelssite

./: .env  .env.dev  .gitignore  Dockerfile  Dockerfile.build  Dockerfile.rmg  Pipfile  README.md  b00010064.xml  db.sqlite3  docker-compose.debug.yml  docker-compose.migrate.yml  docker-compose.runserver.yml  docker-compose.yml  environment.yml  errors.txt  export_xml.py  exporterrors.txt  fail.txt  importChemkin.profile  import_prime.py  importerrors.txt  manage.py  model-experiments.ipynb  mydatabase  pyproject.toml  requirements.txt  rmgsite_workspace.code-workspace  settings.py  setup.cfg  writertest.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-builds.yml  epics.yml  kms-build.yml  main.yml
api/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
api/migrations/: 0001_initial.py
backend/: api.py  database.py  main.py  models.py
backend/api/: db.py  isomer.py  kinetic_model.py  kinetics.py  reaction.py  resources.py  routes.py  species.py  structure.py  transport.py
backend/database/: __init__.py  database.py  event_model.py  event_observer.py  event_source.py  event_store.py  list_event_store.py  model_repository.py  (+1 more)
database/: admin.py  apps.py  filters.py  forms.py  forms_old.py  gitContext.py  models_old.py  signals.py  tools.py  urls.py  urls_old.py  views.py  views.py.bak  views_old.py
django_to_xml/: b00010064.xml  export_xml.py  writertest.py
import_tools/: import_RMG_models.py
ioscripts/: import_prime.py
kineticmodels/: Prime.py  Untitled Diagram.xml  admin.py  forms.py  import_many_kinetic_models.py  model_chart  models.py  tests.py  urls.py  views.py
kineticsdatabase/: settings.py  urls.py  wsgi.py
kineticssite/: settings.py  urls.py  wsgi.py
kms/: settings.py  test_settings.py  urls.py  wsgi.py
nginx/: nginx.conf
polls/: admin.py  models.py  urls.py  views.py
rmgsite/: settings.py  urls.py  wsgi.py
rmgweb/: secretsettings.py  settings.py  urls.py
scripts/: export_xml.py  import_RMG_models.py  import_prime.py  import_sources_from_spreadsheet.py  oldexporter.py  writertest.py
tests/: conftest.py  km.json  test_api.py  test_database.py  test_encoded_set.py  test_event_store.py
(+274 files in other folders)
