[tool.poetry]
name = "kineticmodelssite"
version = "0.1.0"
description = ""
authors = []

[tool.black]
line-length = 100
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''

[tool.poetry.dependencies]
python = "^3.7"
cairocffi = "^1.2.0"
Django = "^3.1.7"
django-autocomplete-light = "^3.8.2"
django-crispy-forms = "^1.11.1"
django-extensions = "^3.1.1"
django-filter = "^2.4.0"
django-model-utils = "^4.1.1"
django-test-migrations = "^1.1.0"
djangorestframework = "^3.12.2"
drf-writable-nested = "^0.6.2"
gunicorn = "^20.0.4"
habanero = "^0.7.4"
psycopg2 = "^2.8.6"
pydantic = "^1.7.3"
python-dotenv = "^0.15.0"
titlecase = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-django = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
