[tool.black]
line-length = 100
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''

[tool.poetry]
name = "kineticmodelssite"
version = "0.1.0"
description = "Web app for working with chemical kinetic models"
authors = ["Kian Mehrabani <kianmehrabani@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.1"
PyYAML = "^6.0"
pydantic = "^1.9.1"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
frozendict = "^2.3.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"
hypothesis = "^6.53.0"
isort = "^5.10.1"
schemathesis = "^3.16.1"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
strict_optional = true
plugins = "pydantic.mypy"
